--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -41,7 +41,7 @@
 	<div class="cmds text-left" style="display:block">
 		<div class="tooltips" data-cmd_id="#namedistriid#" style="margin-left:5px;display: #namedistri_display#;">
 			<span title="Distribution Linux</br><i>Date de valeur : #namedistri_value#</br>Date de collecte : #namedistri_collect#</i>" class="fab fa-linux" style="min-width:15px"></span>
-			<span class="value">#namedistri#</span>
+			<span>#namedistri#</span>
 		</div>
 		<div class="tooltips" data-cmd_id="#uptimeid#" style="margin-left:5px;display: #uptime_display#;">
 			<span title="Temps d'Activité (UpTime)</br><i>Date de valeur : #uptime_value#</br>Date de collecte : #uptime_collect#</i>" class="fas fa-tachometer-alt" style="min-width:15px;"></span>
@@ -101,15 +101,15 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#Mempourc#' === '') {
-					$('#Mempourcent#id#').append('<span class="value">#Mem#</span>');
+					$('#Mempourcent#id#').append('<span>#Mem#</span>');
 				} else if ((parseInt('#Mempourc#') > parseInt('#Mempourc_colorhigh#')) && '#Mempourc_colorhigh#' !== '') {
-					$('#Mempourcent#id#').append('#Mem# (<span data-cmd_id="#Mempourcid#" class="value history cursor" style="color: var(--al-success-color) !important;" >#Mempourc#%</span>)');
+					$('#Mempourcent#id#').append('#Mem# (<span data-cmd_id="#Mempourcid#" class="value history cursor" style="color: var(--al-success-color) !important;" >#Mempourc#</span><span>%</span>)');
 				} else if ((parseInt('#Mempourc#') >= parseInt('#Mempourc_colorlow#')) && (parseInt('#Mempourc#') <= parseInt('#Mempourc_colorhigh#'))) {
-					$('#Mempourcent#id#').append('#Mem# (<span data-cmd_id="#Mempourcid#" class="value history cursor" style="color: var(--al-warning-color) !important;" >#Mempourc#%</span>)');
+					$('#Mempourcent#id#').append('#Mem# (<span data-cmd_id="#Mempourcid#" class="value history cursor" style="color: var(--al-warning-color) !important;" >#Mempourc#</span><span>%</span>)');
 				} else if (parseInt('#Mempourc#') < parseInt('#Mempourc_colorlow#')) {
-					$('#Mempourcent#id#').append('#Mem# (<span data-cmd_id="#Mempourcid#" class="value history cursor" style="color: var(--al-danger-color) !important;" >#Mempourc#%</span>)');
+					$('#Mempourcent#id#').append('#Mem# (<span data-cmd_id="#Mempourcid#" class="value history cursor" style="color: var(--al-danger-color) !important;" >#Mempourc#</span><span>%</span>)');
 				} else {
-					$('#Mempourcent#id#').append('#Mem# (<span data-cmd_id="#Mempourcid#" class="value history cursor" >#Mempourc#%</span>)');
+					$('#Mempourcent#id#').append('#Mem# (<span data-cmd_id="#Mempourcid#" class="value history cursor" >#Mempourc#</span><span>%</span>)');
 				}
 			}
 		</script>
@@ -120,15 +120,15 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#Swappourc#' === '') {
-					$('#Swappourc#id#').append('<span class="value">#Mem_swap#</span>');
+					$('#Swappourc#id#').append('<span>#Mem_swap#</span>');
 				} else if ((parseInt('#Swappourc#') > parseInt('#Swappourc_colorhigh#')) && '#Swappourc_colorhigh#' !== '') {
-					$('#Swappourc#id#').append('#Mem_swap# (<span data-cmd_id="#Swappourcid#" class="value history cursor" style="color: var(--al-success-color) !important;" >#Swappourc#%</span>)');
+					$('#Swappourc#id#').append('#Mem_swap# (<span data-cmd_id="#Swappourcid#" class="value history cursor" style="color: var(--al-success-color) !important;" >#Swappourc#</span><span>%</span>)');
 				} else if ((parseInt('#Swappourc#') >= parseInt('#Swappourc_colorlow#')) && (parseInt('#Swappourc#') <= parseInt('#Swappourc_colorhigh#'))) {
-					$('#Swappourc#id#').append('#Mem_swap# (<span data-cmd_id="#Swappourcid#" class="value history cursor" style="color: var(--al-warning-color) !important;" >#Swappourc#%</span>)');
+					$('#Swappourc#id#').append('#Mem_swap# (<span data-cmd_id="#Swappourcid#" class="value history cursor" style="color: var(--al-warning-color) !important;" >#Swappourc#</span><span>%</span>)');
 				} else if (parseInt('#Swappourc#') < parseInt('#Swappourc_colorlow#')) {
-					$('#Swappourc#id#').append('#Mem_swap# (<span data-cmd_id="#Swappourcid#" class="value history cursor" style="color: var(--al-danger-color) !important;" >#Swappourc#%</span>)');
+					$('#Swappourc#id#').append('#Mem_swap# (<span data-cmd_id="#Swappourcid#" class="value history cursor" style="color: var(--al-danger-color) !important;" >#Swappourc#</span><span>%</span>)');
 				} else {
-					$('#Swappourc#id#').append('#Mem_swap# (<span data-cmd_id="#Swappourcid#" class="value history cursor" >#Swappourc#%</span>)');
+					$('#Swappourc#id#').append('#Mem_swap# (<span data-cmd_id="#Swappourcid#" class="value history cursor" >#Swappourc#</span><span>%</span>)');
 				}
 			}
 		</script>
@@ -138,7 +138,7 @@
 		</div>
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
-				$('#ethernet0#id#').append('<span class="value">#ethernet0#</span>');
+				$('#ethernet0#id#').append('<span">#ethernet0#</span>');
 			}
 		</script>
 		<div class="tooltips" data-cmd_id="#hddpourcusedid#" style="margin-left:5px;display: #hddused_display#;">
@@ -150,13 +150,13 @@
 				if ('#hddpourcused#' === '') {
 					$('#hddpourcused#id#').append('<span></span>');
 				} else if (parseInt('#hddpourcused#') < parseInt('#hddpourcused_colorlow#')) {
-					$('#hddpourcused#id#').append('Total : #hddtotal# - Utilisé : #hddused# (<span data-cmd_id="#hddpourcusedid#" class="value history cursor" style="color: var(--al-success-color) !important;">#hddpourcused#%</span>)');
+					$('#hddpourcused#id#').append('Total : <span class="value">#hddtotal#</span> - Utilisé : <span class="value">#hddused#</span> (<span data-cmd_id="#hddpourcusedid#" class="value history cursor" style="color: var(--al-success-color) !important;">#hddpourcused#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcused#') >= parseInt('#hddpourcused_colorlow#')) && (parseInt('#hddpourcused#') <= parseInt('#hddpourcused_colorhigh#'))) {
-					$('#hddpourcused#id#').append('Total : #hddtotal# - Utilisé : #hddused# (<span data-cmd_id="#hddpourcusedid#" class="value history cursor" style="color: var(--al-warning-color) !important;">#hddpourcused#%</span>)');
+					$('#hddpourcused#id#').append('Total : <span class="value">#hddtotal#</span> - Utilisé : <span class="value">#hddused#</span> (<span data-cmd_id="#hddpourcusedid#" class="value history cursor" style="color: var(--al-warning-color) !important;">#hddpourcused#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcused#') > parseInt('#hddpourcused_colorhigh#')) && '#hddpourcused_colorhigh#' !== '') {
-					$('#hddpourcused#id#').append('Total : #hddtotal# - Utilisé : #hddused# (<span data-cmd_id="#hddpourcusedid#" class="value history cursor" style="color: var(--al-danger-color) !important;">#hddpourcused#%</span>)');
+					$('#hddpourcused#id#').append('Total : <span class="value">#hddtotal#</span> - Utilisé : <span class="value">#hddused#</span> (<span data-cmd_id="#hddpourcusedid#" class="value history cursor" style="color: var(--al-danger-color) !important;">#hddpourcused#</span><span>%</span>)');
 				} else {
-					$('#hddpourcused#id#').append('Total : #hddtotal# - Utilisé : #hddused# (<span data-cmd_id="#hddpourcusedid#" class="value history cursor">#hddpourcused#%</span>)');
+					$('#hddpourcused#id#').append('Total : #hddtotal# - Utilisé : #hddused# (<span data-cmd_id="#hddpourcusedid#" class="value history cursor">#hddpourcused#</span><span>%</span>)');
 				}
 			}
 		</script>
@@ -169,13 +169,13 @@
 				if ('#hddpourcusedv2#' === '') {
 					$('#hddpourcusedv2#id#').append('<span></span>');
 				} else if (parseInt('#hddpourcusedv2#') < parseInt('#hddpourcusedv2_colorlow#')) {
-					$('#hddpourcusedv2#id#').append('Total : #hddtotalv2# - Utilisé : #hddusedv2# (<span data-cmd_id="#hddpourcusedv2id#" class="value history cursor" style="color: var(--al-success-color) !important;">#hddpourcusedv2#%</span>)');
+					$('#hddpourcusedv2#id#').append('Total : <span class="value">#hddtotalv2#</span> - Utilisé : <span class="value">#hddusedv2#</span> (<span data-cmd_id="#hddpourcusedv2id#" class="value history cursor" style="color: var(--al-success-color) !important;">#hddpourcusedv2#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcusedv2#') >= parseInt('#hddpourcusedv2_colorlow#')) && (parseInt('#hddpourcusedv2#') <= parseInt('#hddpourcusedv2_colorhigh#'))) {
-					$('#hddpourcusedv2#id#').append('Total : #hddtotalv2# - Utilisé : #hddusedv2# (<span data-cmd_id="#hddpourcusedv2id#" class="value history cursor" style="color: var(--al-warning-color) !important;">#hddpourcusedv2#%</span>)');
+					$('#hddpourcusedv2#id#').append('Total : <span class="value">#hddtotalv2#</span> - Utilisé : <span class="value">#hddusedv2#</span> (<span data-cmd_id="#hddpourcusedv2id#" class="value history cursor" style="color: var(--al-warning-color) !important;">#hddpourcusedv2#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcusedv2#') > parseInt('#hddpourcusedv2_colorhigh#')) && '#hddpourcusedv2_colorhigh#' !== '') {
-					$('#hddpourcusedv2#id#').append('Total : #hddtotalv2# - Utilisé : #hddusedv2# (<span data-cmd_id="#hddpourcusedv2id#" class="value history cursor" style="color: var(--al-danger-color) !important;">#hddpourcusedv2#%</span>)');
+					$('#hddpourcusedv2#id#').append('Total : <span class="value">#hddtotalv2#</span> - Utilisé : <span class="value">#hddusedv2#</span> (<span data-cmd_id="#hddpourcusedv2id#" class="value history cursor" style="color: var(--al-danger-color) !important;">#hddpourcusedv2#</span><span>%</span>)');
 				} else {
-					$('#hddpourcusedv2#id#').append('Total : #hddtotalv2# - Utilisé : #hddusedv2# (<span data-cmd_id="#hddpourcusedv2id#" class="value history cursor">#hddpourcusedv2#%</span>)');
+					$('#hddpourcusedv2#id#').append('Total : <span class="value">#hddtotalv2#</span> - Utilisé : <span class="value">#hddusedv2#</span> (<span data-cmd_id="#hddpourcusedv2id#" class="value history cursor">#hddpourcusedv2#</span><span>%</span>)');
 				}
 			}
 		</script>
@@ -188,13 +188,13 @@
 				if ('#hddpourcusedusb#' === '') {
 					$('#hddpourcusedusb#id#').append('<span></span>');
 				} else if (parseInt('#hddpourcusedusb#') < parseInt('#hddpourcusedusb_colorlow#')) {
-					$('#hddpourcusedusb#id#').append('Total : #hddtotalusb# - Utilisé : #hddusedusb# (<span data-cmd_id="#hddpourcusedusbid#" class="value history cursor" style="color: var(--al-success-color) !important;">#hddpourcusedusb#%</span>)');
+					$('#hddpourcusedusb#id#').append('Total : <span class="value">#hddtotalusb#</span> - Utilisé : <span class="value">#hddusedusb#</span> (<span data-cmd_id="#hddpourcusedusbid#" class="value history cursor" style="color: var(--al-success-color) !important;">#hddpourcusedusb#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcusedusb#') >= parseInt('#hddpourcusedusb_colorlow#')) && (parseInt('#hddpourcusedusb#') <= parseInt('#hddpourcusedusb_colorhigh#'))) {
-					$('#hddpourcusedusb#id#').append('Total : #hddtotalusb# - Utilisé : #hddusedusb# (<span data-cmd_id="#hddpourcusedusbid#" class="value history cursor" style="color: var(--al-warning-color) !important;">#hddpourcusedusb#%</span>)');
+					$('#hddpourcusedusb#id#').append('Total : <span class="value">#hddtotalusb#</span> - Utilisé : <span class="value">#hddusedusb#</span> (<span data-cmd_id="#hddpourcusedusbid#" class="value history cursor" style="color: var(--al-warning-color) !important;">#hddpourcusedusb#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcusedusb#') > parseInt('#hddpourcusedusb_colorhigh#')) && '#hddpourcusedusb_colorhigh#' !== '') {
-					$('#hddpourcusedusb#id#').append('Total : #hddtotalusb# - Utilisé : #hddusedusb# (<span data-cmd_id="#hddpourcusedusbid#" class="value history cursor" style="color: var(--al-danger-color) !important;">#hddpourcusedusb#%</span>)');
+					$('#hddpourcusedusb#id#').append('Total : <span class="value">#hddtotalusb#</span> - Utilisé : <span class="value">#hddusedusb#</span> (<span data-cmd_id="#hddpourcusedusbid#" class="value history cursor" style="color: var(--al-danger-color) !important;">#hddpourcusedusb#</span><span>%</span>)');
 				} else {
-					$('#hddpourcusedusb#id#').append('Total : #hddtotalusb# - Utilisé : #hddusedusb# (<span data-cmd_id="#hddpourcusedusbid#" class="value history cursor">#hddpourcusedusb#%</span>)');
+					$('#hddpourcusedusb#id#').append('Total : <span class="value">#hddtotalusb#</span> - Utilisé : <span class="value">#hddusedusb#</span> (<span data-cmd_id="#hddpourcusedusbid#" class="value history cursor">#hddpourcusedusb#</span><span>%</span>)');
 				}
 			}
 		</script>
@@ -207,13 +207,13 @@
 				if ('#hddpourcusedesata#' === '') {
 					$('#hddpourcusedesata#id#').append('<span></span>');
 				} else if (parseInt('#hddpourcusedesata#') < parseInt('#hddpourcusedesata_colorlow#')) {
-					$('#hddpourcusedesata#id#').append('Total : #hddtotalesata# - Utilisé : #hddusedesata# (<span data-cmd_id="#hddpourcusedesataid#" class="value history cursor" style="color: var(--al-success-color) !important;">#hddpourcusedesata#%</span>)');
+					$('#hddpourcusedesata#id#').append('Total : <span class="value">#hddtotalesata#</span> - Utilisé : <span class="value">#hddusedesata#</span> (<span data-cmd_id="#hddpourcusedesataid#" class="value history cursor" style="color: var(--al-success-color) !important;">#hddpourcusedesata#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcusedesata#') >= parseInt('#hddpourcusedesata_colorlow#')) && (parseInt('#hddpourcusedesata#') <= parseInt('#hddpourcusedesata_colorhigh#'))) {
-					$('#hddpourcusedesata#id#').append('Total : #hddtotalesata# - Utilisé : #hddusedesata# (<span data-cmd_id="#hddpourcusedesataid#" class="value history cursor" style="color: var(--al-warning-color) !important;">#hddpourcusedesata#%</span>)');
+					$('#hddpourcusedesata#id#').append('Total : <span class="value">#hddtotalesata#</span> - Utilisé : <span class="value">#hddusedesata#</span> (<span data-cmd_id="#hddpourcusedesataid#" class="value history cursor" style="color: var(--al-warning-color) !important;">#hddpourcusedesata#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcusedesata#') > parseInt('#hddpourcusedesata_colorhigh#')) && '#hddpourcusedesata_colorhigh#' !== '') {
-					$('#hddpourcusedesata#id#').append('Total : #hddtotalesata# - Utilisé : #hddusedesata# (<span data-cmd_id="#hddpourcusedesataid#" class="value history cursor" style="color: var(--al-danger-color) !important;">#hddpourcusedesata#%</span>)');
+					$('#hddpourcusedesata#id#').append('Total : <span class="value">#hddtotalesata#</span> - Utilisé : <span class="value">#hddusedesata#</span> (<span data-cmd_id="#hddpourcusedesataid#" class="value history cursor" style="color: var(--al-danger-color) !important;">#hddpourcusedesata#</span><span>%</span>)');
 				} else {
-					$('#hddpourcusedesata#id#').append('Total : #hddtotalesata# - Utilisé : #hddusedesata# (<span data-cmd_id="#hddpourcusedesataid#" class="value history cursor">#hddpourcusedesata#%</span>)');
+					$('#hddpourcusedesata#id#').append('Total : <span class="value">#hddtotalesata#</span> - Utilisé : <span class="value">#hddusedesata#</span> (<span data-cmd_id="#hddpourcusedesataid#" class="value history cursor">#hddpourcusedesata#%</span>)');
 				}
 			}
 		</script>
@@ -226,16 +226,16 @@
 				if ('#cpu_temp#' !== '' && '#cpu_temp_display#' == 'OK') {
 					if (parseFloat('#cpu_temp#') < parseFloat('#cpu_temp_colorlow#')) {
 						$('#cpu#id#').append('<span class="value">#cpu# </span>');
-						$('#cpu_temp#id#').append('(<span data-cmd_id="#cpu_tempid#" class="value history cursor" style="color: var(--al-success-color) !important;" >#cpu_temp#°C</span>)');
+						$('#cpu_temp#id#').append('(<span data-cmd_id="#cpu_tempid#" class="value history cursor" style="color: var(--al-success-color) !important;" >#cpu_temp#</span><span>°C</span>)');
 					} else if ((parseFloat('#cpu_temp#') >= parseFloat('#cpu_temp_colorlow#')) && (parseFloat('#cpu_temp#') <= parseFloat('#cpu_temp_colorhigh#'))) {
 						$('#cpu#id#').append('<span>#cpu# </span>');
-						$('#cpu_temp#id#').append('(<span data-cmd_id="#cpu_tempid#" class="value history cursor" style="color: var(--al-warning-color) !important;" >#cpu_temp#°C</span>)');
+						$('#cpu_temp#id#').append('(<span data-cmd_id="#cpu_tempid#" class="value history cursor" style="color: var(--al-warning-color) !important;" >#cpu_temp#</span><span>°C</span>)');
 					} else if ((parseFloat('#cpu_temp#') > parseFloat('#cpu_temp_colorhigh#')) && '#cpu_temp_colorhigh#' !== '') {
 						$('#cpu#id#').append('<span>#cpu# </span>');
-						$('#cpu_temp#id#').append('(<span data-cmd_id="#cpu_tempid#" class="value history cursor" style="color: var(--al-danger-color) !important;" >#cpu_temp#°C</span>)');
+						$('#cpu_temp#id#').append('(<span data-cmd_id="#cpu_tempid#" class="value history cursor" style="color: var(--al-danger-color) !important;" >#cpu_temp#</span><span>°C</span>)');
 					} else {
 						$('#cpu#id#').append('<span>#cpu# </span>');
-						$('#cpu_temp#id#').append('(<span data-cmd_id="#cpu_tempid#" class="value history cursor">#cpu_temp#°C</span>)');
+						$('#cpu_temp#id#').append('(<span data-cmd_id="#cpu_tempid#" class="value history cursor">#cpu_temp#</span><span>°C</span>)');
 					}
 				} else {
 					$('#cpu#id#').append('<span class="value">#cpu#</span>');
@@ -256,7 +256,7 @@
 					} else if ((parseFloat('#perso1#') > parseFloat('#perso1_colorhigh#')) && parseFloat('#perso1_colorhigh#') !== '') {
 						$('#uniteperso1#id#').append('<span data-cmd_id="#uniteperso1#id# class="value history cursor" style="color: var(--al-danger-color) !important;" >#perso1#</span><span>#uniteperso1#</span>');
 					} else {
-						$('#uniteperso1#id#').append('<span data-cmd_id="#perso1id#" class="value history cursor">#perso1##uniteperso1#</span>');
+						$('#uniteperso1#id#').append('<span data-cmd_id="#perso1id#" class="value history cursor">#perso1#</span><span>#uniteperso1#</span>');
 					}
 				} else {
 					$('#uniteperso1#id#').append('<span></span>');
@@ -277,7 +277,7 @@
 					} else if ((parseFloat('#perso2#') > parseFloat('#perso2_colorhigh#')) && parseFloat('#perso2_colorhigh#') !== '') {
 						$('#uniteperso2#id#').append('<span data-cmd_id="#uniteperso2#id# class="value history cursor" style="color: var(--al-danger-color) !important;" >#perso2#</span><span>#uniteperso2#</span>');
 					} else {
-						$('#uniteperso2#id#').append('<span data-cmd_id="#perso2id#" class="value history cursor">#perso2##uniteperso2#</span>');
+						$('#uniteperso2#id#').append('<span data-cmd_id="#perso2id#" class="value history cursor">#perso2#</span><span>#uniteperso2#</span>');
 					}
 				} else {
 					$('#uniteperso2#id#').append('<span></span>');
