--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -134,7 +134,7 @@
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #ethernet0_display#;">
 			<span
-				title="Trafic réseau (#ethernet0_name#) || Date valeur : #ethernet0_value# || Date collecte : #ethernet0_collect#"
+				title="Trafic réseau (#ethernet0_name# / #ethernet0_ip#) || Date valeur : #ethernet0_value# || Date collecte : #ethernet0_collect#"
 				class="fa techno-fleches" style="width:15px;"></span>
 			<span id="ethernet0#id#"></span>
 		</div>
