--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -6,10 +6,10 @@
 			<span id="iconCron#id#"></span>
 			<script>
 				if ('#cron_state#' == '1') {
-					$('#iconCron#id#').append('<i title="Cron ON" class="far fa-play-circle tooltips" style="font-size : 1.1em;color: var(--al-success-color) !important;"></i>');
+					$('#iconCron#id#').append('<i title="Cron ON" class="far fa-play-circle tooltips" style="display: #cron_state_display#;font-size : 1.1em;color: var(--al-success-color) !important;"></i>');
 				}
 				if ('#cron_state#' == '0') {
-					$('#iconCron#id#').append('<i title="Cron PAUSE" class="far fa-pause-circle tooltips" style="font-size : 1.1em;color: var(--al-danger-color) !important;"></i>');
+					$('#iconCron#id#').append('<i title="Cron PAUSE" class="far fa-pause-circle tooltips" style="display: #cron_state_display#;font-size : 1.1em;color: var(--al-danger-color) !important;"></i>');
 				}
 			</script>
 			<span id="iconSSH#id#"></span>
