--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -3,21 +3,15 @@
 		<span class="reportModeVisible">#name_display# <span class="object_name">#object_name#</span></span>
 		<a href="#eqLink#" class="reportModeHidden">#name_display# <span class="object_name">#object_name#</span></a>
 		<span class="cmd refresh pull-right cursor">
-			<span class="cron tooltips" data-type="action" data-subtype="other" data-cmd_id="#cron_state_id#">
-				<a class="action" style="cursor: pointer;">iconCron#id#</a>
-				<script>
-					$('.cron[data-cmd_id=#cron_state_id#] .action').on('click', function () {
-						jeedom.cmd.execute({ id: '#cron_state_id#' });
-					});
-					if ('#cron_state#' == '1') {
-						$('#iconCron#id#').append('<i title="Cron ON" class="fas fa-play-circle tooltips" style="display: #cron_state_display#;font-size : 1.1em;color: var(--al-success-color) !important;"></i>');
-					}
-					if ('#cron_state#' == '0') {
-						$('#iconCron#id#').append('<i title="Cron PAUSE" class="fas fa-pause-circle tooltips" style="display: #cron_state_display#;font-size : 1.1em;color: var(--al-danger-color) !important;"></i>');
-					}
-					
-				</script>
-			</span>
+			<span id="iconCron#id#"></span>
+			<script>
+				if ('#cron_state#' == '1') {
+					$('#iconCron#id#').append('<i title="Cron ON" class="fas fa-play-circle tooltips" style="display: #cron_state_display#;font-size : 1.1em;color: var(--al-success-color) !important;"></i>');
+				}
+				if ('#cron_state#' == '0') {
+					$('#iconCron#id#').append('<i title="Cron PAUSE" class="fas fa-pause-circle tooltips" style="display: #cron_state_display#;font-size : 1.1em;color: var(--al-danger-color) !important;"></i>');
+				}
+			</script>
 			<span id="iconSSH#id#"></span>
 			<script>
 				if ('#cnx_ssh#' == 'OK') {
