--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -2,6 +2,15 @@
 	data-eqLogic_uid="#uid#" data-translate-category="#translate_category#" data-category="#category#"
 	data-tags="#tags#" style="#style#;">
 	<span class="cmd refresh pull-right cursor">
+		<span id="iconCron#id#"></span>
+		<script>
+			if ('#cron_state#' == '1') {
+				$('#iconCron#id#').append('<i title="Cron ON" class="fas fa-play-circle tooltips" style="display: #cron_state_display#;font-size : 1.1em;color: var(--al-success-color) !important;"></i>');
+			}
+			if ('#cron_state#' == '0') {
+				$('#iconCron#id#').append('<i title="Cron PAUSE" class="fas fa-pause-circle tooltips" style="display: #cron_state_display#;font-size : 1.1em;color: var(--al-danger-color) !important;"></i>');
+			}
+		</script>
 		<span id="iconSSH#id#"></span>
 		<script>
 			if ('#cnx_ssh#' == 'OK') {
