--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -4,11 +4,11 @@
 	<span class="cmd refresh pull-right cursor">
 		<span id="iconCron#id#"></span>
 		<script>
-			if ('#cron_state#' == '1') {
-				$('#iconCron#id#').append('<i title="Cron ON" class="fas fa-play-circle tooltips" style="display: #cron_state_display#;font-size : 1.1em;color: var(--al-success-color) !important;"></i>');
+			if ('#cron_status#' == '1') {
+				$('#iconCron#id#').append('<i title="Cron ON" class="fas fa-play-circle tooltips" style="display: #cron_status_display#;font-size : 1.1em;color: var(--al-success-color) !important;"></i>');
 			}
-			if ('#cron_state#' == '0') {
-				$('#iconCron#id#').append('<i title="Cron PAUSE" class="fas fa-pause-circle tooltips" style="display: #cron_state_display#;font-size : 1.1em;color: var(--al-danger-color) !important;"></i>');
+			if ('#cron_status#' == '0') {
+				$('#iconCron#id#').append('<i title="Cron PAUSE" class="fas fa-pause-circle tooltips" style="display: #cron_status_display#;font-size : 1.1em;color: var(--al-danger-color) !important;"></i>');
 			}
 		</script>
 		<span id="iconSSH#id#"></span>
