--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -2,7 +2,7 @@
 	<div class="widget-name text-center">
 		<span class="reportModeVisible">#name_display# <span class="object_name">#object_name#</span></span>
 		<a href="#eqLink#" class="reportModeHidden">#name_display# <span class="object_name">#object_name#</span></a>
-		<span class="cmd refresh pull-right cursor">
+		<span class="cmd refresh pull-right">
 			<span id="iconCron#id#"></span>
 			<script>
 				if ('#cron_status#' == '1') {
