--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -1,7 +1,7 @@
 <div class="eqLogic eqLogic-widget col2" data-eqLogic_id="#id#" data-eqType="#eqType#" data-version="#version#"
 	data-eqLogic_uid="#uid#" data-translate-category="#translate_category#" data-category="#category#"
 	data-tags="#tags#" style="#style#;">
-	<span class="cmd refresh pull-right">
+	<span class="cmd refresh pull-right cursor">
 		<span id="iconCron#id#"></span>
 		<script>
 			if ('#cron_status#' == '1') {
