--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -1,7 +1,7 @@
 <div class="eqLogic eqLogic-widget col2" data-eqLogic_id="#id#" data-eqType="#eqType#" data-version="#version#"
 	data-eqLogic_uid="#uid#" data-translate-category="#translate_category#" data-category="#category#"
 	data-tags="#tags#" style="#style#;">
-	<span class="cmd refresh pull-right cursor">
+	<span class="cmd refresh pull-right" style="display: inline-block;">
 		<span id="iconCron#id#"></span>
 		<script>
 			if ('#cron_status#' == '1') {
@@ -20,7 +20,7 @@
 				$('#iconSSH#id#').append('<i title="Connexion SSH KO" class="fas fa-times tooltips" style="color: var(--al-danger-color) !important;"></i>');
 			}
 		</script>
-		<span title="Eteindre l'Equipement" class="poweroff tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_poweroff_id#" style="display: inline-block;">
+		<span title="Eteindre l'Equipement" class="poweroff tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_poweroff_id#" style="display: #cmd_poweroff_display#;">
 			<a class="action" style="cursor: pointer;"><i class="fas fa-power-off" style="padding-left:5px;"></i></a>
 			<script>
 				$('.poweroff[data-cmd_id=#cmd_poweroff_id#] .action').on('click', function () {
@@ -30,8 +30,7 @@
 				});
 			</script>
 		</span>
-		<!-- <span title="Redémarrer l'Equipement" class="reboot tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_reboot_id#" style="display: #cmd_reboot_display#;"> -->
-		<span title="Redémarrer l'Equipement" class="reboot tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_reboot_id#" style="display: inline-block;"></span>
+		<span title="Redémarrer l'Equipement" class="reboot tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_reboot_id#" style="display: #cmd_reboot_display#;">
 			<a class="action" style="cursor: pointer;"><i class="fas fa-redo" style="padding-left:5px;"></i></a>
 			<script>
 				$('.reboot[data-cmd_id=#cmd_reboot_id#] .action').on('click', function () {
